--- a/blat/static/css/layout.css
+++ b/blat/static/css/layout.css
@@ -24,6 +24,10 @@ a:hover{
   color: #d44950;
 }
 header{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   background: #41295a; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #41295a , #2F0743); /* Chrome 10-25, Safari 5.1-6 */
@@ -60,4 +64,43 @@ header a{
   padding: 4px;
   color: #fff;
   background-color: #d9edf7;
+}
+#mycustomform{
+  max-width: 260px;
+  margin: 5% auto;
+}
+input, button {
+  padding: 4px;
+  border-radius: 2px;
+  border: 1px solid skyblue;
+}
+button{
+  color: #fff;
+  cursor: pointer;
+  padding: 6px 18px;
+  border-radius: 4px;
+  border-color: #357ebd;
+  background-color: #428bca;
+}
+button:hover{
+  background-image: -webkit-linear-gradient(#e72510, #d9230f 6%, #cb210e);
+  background-image: -o-linear-gradient(#e72510, #d9230f 6%, #cb210e);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#e72510), color-stop(6%, #d9230f), to(#cb210e));
+  background-image: linear-gradient(#e72510, #d9230f 6%, #cb210e);
+  background-repeat: no-repeat;
+  border: 1px solid #a91b0c;
+}
+label{
+  min-width: 75px;
+  display: inline-block;
+}
+
+@media only screen and (max-width: 450px) {
+    header {
+      -webkit-flex-flow: row wrap;
+      justify-content: space-around;
+    }
+    header .brand{
+      flex-basis: 100%;
+    }
 }
