--- a/blat/templates/blat/master.html
+++ b/blat/templates/blat/master.html
@@ -11,6 +11,12 @@
     <a href="{% url 'homepage' %}" class="brand">Blather App</a>
     <a href="{% url 'homepage' %}">Blats</a>
     <a href="{% url 'admin:index' %}">Admin</a>
+    {% if user.is_authenticated %}
+    	<a href="{% url 'myview' %}">My Blats</a>
+      <a href="{% url 'logout' %}?next=/">Logout</a>
+    {% else %}
+      <a href="/login/?next=/">Login</a>
+    {% endif %}
   </header>
   <div class="container">
     {% block content %}{% endblock %}
