--- a/blat/templates/blat/master.html
+++ b/blat/templates/blat/master.html
@@ -18,6 +18,11 @@
       <a href="/login/?next=/">Login</a>
     {% endif %}
   </header>
+  {% if user.is_authenticated %}
+    Logged in as: {{user}}. {{user.profile.bio}}
+    {% if user.profile.blog %}<a href="{{user.profile.blog}}">Blog</a>
+    {% endif %}
+  {% endif %}
   <div class="container">
     {% block content %}{% endblock %}
   </div>
