--- a/blat/static/css/layout.css
+++ b/blat/static/css/layout.css
@@ -23,12 +23,17 @@ a{
 a:hover{
   color: #d44950;
 }
+.active{
+  color: white;
+}
 header{
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
   background: #41295a; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #41295a , #2F0743); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #41295a , #2F0743); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -67,7 +72,7 @@ header a{
 }
 #mycustomform{
   max-width: 260px;
-  margin: 5% auto;
+  margin: 2% auto;
 }
 input, button {
   padding: 4px;
@@ -94,12 +99,10 @@ label{
   min-width: 75px;
   display: inline-block;
 }
-
+.errorlist li{
+  color: #e72510;
+}
 @media only screen and (max-width: 450px) {
-    header {
-      -webkit-flex-flow: row wrap;
-      justify-content: space-around;
-    }
     header .brand{
       flex-basis: 100%;
     }
