--- a/blat/templates/blat/master.html
+++ b/blat/templates/blat/master.html
@@ -12,6 +12,7 @@
     <a href="{% url 'homepage' %}">Blats</a>
     <a href="{% url 'admin:index' %}">Admin</a>
     {% if user.is_authenticated %}
+      <a href="{% url 'newblat' %}">Share a Blat</a>
     	<a href="{% url 'myview' %}">My Blats</a>
       <a href="{% url 'logout' %}?next=/">Logout</a>
     {% else %}
@@ -19,9 +20,10 @@
     {% endif %}
   </header>
   {% if user.is_authenticated %}
-    Logged in as: {{user}}. {{user.profile.bio}}
+    <center>Logged in as: {{user}}. {{user.profile.bio}}
     {% if user.profile.blog %}<a href="{{user.profile.blog}}">Blog</a>
     {% endif %}
+    </center>
   {% endif %}
   <div class="container">
     {% block content %}{% endblock %}
