--- a/blat/templates/blat/detail.html
+++ b/blat/templates/blat/detail.html
@@ -4,15 +4,18 @@
 
 {% block content %}
 <div class="cards">
-    <div class="card">
-        <h4>{{ blat.text }}</h4>
-        <div class="card-copy">
-            {{ blat.created_on }}
-            {% if blat.via %}
-                <a href="{{blat.via}}"><i>Via</i></a>
-            {% endif %}
-        </div>
-        <a href="javascript:history.go(-1)">Back</a>
+  <div class="card">
+    <h4>{{ blat.text }}</h4>
+    <div class="card-copy">
+        {{ blat.created_on }}
+        {% if blat.via %}
+            <a href="{{blat.via}}"><i>Via</i></a>
+        {% endif %}
+        {% if blat.created_by == user %}
+          <a href="{% url 'editblat' pk=blat.id %}">Edit Blat</a>
+        {% endif %}
     </div>
+    <a href="javascript:history.go(-1)">Back</a>
+  </div>
 </div>
 {% endblock %}
