--- a/blat/templates/blat/blat_form.html
+++ b/blat/templates/blat/blat_form.html
@@ -4,7 +4,7 @@
 <form action="" method="post" id="mycustomform">
     <h1>Blat</h1>
     {{form.as_p}}
-    <button type="submit">Login</button>
+    <button type="submit">Create</button>
     {% csrf_token %}
 </form>
 {% endblock %}
